src/components/Comment/Comment.css
.comment {
  padding: 1em;
  margin-bottom: 1em;
  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.3);
  word-wrap: break-word;
}

.comment__header {
  margin-bottom: 1em;
}

.comment__time,
.comment__by,
.comment__replyCount,
.comment__toggle {
  margin-right: 1em;
}

.comment__toggle {
  /* text-decoration: underline; */
  cursor: pointer;
}

.comments__loadButton {
  cursor: pointer;
  text-decoration: underline;
}

.comment__children {
  margin-left: 0.5em;
  margin-top: 1em;
}

@media (min-width: 800px) {
  .comment__children {
    margin-left: 2em;
  }
}

